<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context="com.bootcampnttdata6.plantshost.features.main.createPlant.presenter.CreatePlantFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/inter_family"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_image"
        android:layout_width="@dimen/images"
        android:layout_height="@dimen/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf_insertImg"
            android:textColor="@color/lotus"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:fontFamily="@font/inter_family"
            android:gravity = "center"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@+id/rl_image"
            app:layout_constraintEnd_toEndOf="@+id/rl_image"
            app:layout_constraintStart_toStartOf="@+id/rl_image"
            app:layout_constraintTop_toTopOf="@+id/rl_image"
            app:drawableStartCompat = "@drawable/ic_baseline_add_photo_alternate_24"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_upload_image_plant"
            android:layout_width="@dimen/images"
            android:layout_height="@dimen/images"
            android:layout_margin="@dimen/margin"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/rl_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rl_image"
            app:layout_constraintTop_toTopOf="@+id/rl_image"
            app:shapeAppearance="@style/img_style"
            app:strokeColor="@color/lightGray"
            app:strokeWidth="2dp"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:boxCornerRadiusBottomStart="@dimen/margin"
        app:boxCornerRadiusBottomEnd="@dimen/margin"
        app:boxCornerRadiusTopStart="@dimen/margin"
        app:boxCornerRadiusTopEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/rl_image"
        app:boxStrokeColor="@color/greenlght"
        app:hintTextColor="@color/greenlght"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:fontFamily="@font/inter_family"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:boxCornerRadiusBottomStart="@dimen/margin"
        app:boxCornerRadiusBottomEnd="@dimen/margin"
        app:boxCornerRadiusTopStart="@dimen/margin"
        app:boxCornerRadiusTopEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:boxStrokeColor="@color/greenlght"
        app:hintTextColor="@color/greenlght">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:fontFamily="@font/inter_family"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="8"
            android:minLines="5"
            android:gravity="top|start"
            android:scrollbars="vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:boxCornerRadiusBottomStart="@dimen/margin"
        app:boxCornerRadiusBottomEnd="@dimen/margin"
        app:boxCornerRadiusTopStart="@dimen/margin"
        app:boxCornerRadiusTopEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/inputDescription"
        app:boxStrokeColor="@color/greenlght"
        app:hintTextColor="@color/greenlght">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cpf_price"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:fontFamily="@font/inter_family"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputStatus"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:boxCornerRadiusBottomStart="@dimen/margin"
        app:boxCornerRadiusBottomEnd="@dimen/margin"
        app:boxCornerRadiusTopStart="@dimen/margin"
        app:boxCornerRadiusTopEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/inputPrice"
        app:boxStrokeColor="@color/greenlght"
        app:hintTextColor="@color/greenlght">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cpf_status"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:fontFamily="@font/inter_family"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="@dimen/btnHeight"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="@color/bluelight"
        android:fontFamily="@font/inter_family"
        android:padding="@dimen/padding"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/lotus"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputStatus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="120dp"
        android:layout_height="@dimen/btnHeight"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/greenlght"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textColor="@color/lotus"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"
        android:padding="@dimen/padding"
        android:fontFamily="@font/inter_family"
        android:layout_margin="@dimen/margin"
        app:cornerRadius="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputStatus" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/greenlght"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>